# govtech-gss

./: .gitignore  LICENSE  README.md  pyproject.toml
gitlab/: __main__.py  alembic.ini
gitlab/cli/: _options.py  migrations.py  polls.py
gitlab/core/: __init__.py  clients.py  exceptions.py  models.py  types.py
gitlab/core/tests/: fixtures.py  patches.py  test_client.py
gitlab/migrations/: env.py
gitlab/migrations/versions/: 2a862cc7ef65_create_poll_entry_table.py  aa1828e12501_save_additional_polling_information.py  c82898e5c3d8_optimisations.py
