[tool.poetry]
name = "gitlab"
version = "1.0.0"
description = "Polls a GitLab instance for its current health, readiness, and records the outcome with accompanying metadata."
authors = ["Leo Ng <leong2108@gmail.com>"]
readme = "README.md"


[tool.poetry.dependencies]
python = ">=3.11"
SQLAlchemy = "~2.0"
alembic = "~1.13"
click = "~8.1"
httpx = "~0.25"
pytz = "~2023.3"


[tool.poetry.group.test.dependencies]
pytest = "^7.4.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
